--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "AwesomeApp",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -13,9 +14,11 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "expo": "^32.0.0",
+    "firebase": "^5.9.3",
+    "native-base": "^2.12.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-navigation": "^3.0.9"
+    "react-navigation": "^3.6.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
