--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -6,7 +6,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject",
-    "test": "node ./node_modules/jest/bin/jest.js --watchAll"
+    "test": "node ./node_modules/jest/bin/jest.js --watchAll --coverage"
   },
   "jest": {
     "preset": "jest-expo"
@@ -14,7 +14,7 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "expo": "^32.0.0",
-    "firebase": "^5.9.3",
+    "firebase": "^5.9.4",
     "native-base": "^2.12.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
@@ -22,6 +22,9 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.12.1",
+    "jest": "^24.7.1",
     "jest-expo": "^32.0.0"
   },
   "private": true
